--- a/core/res/src/main/res/values/strings.xml
+++ b/core/res/src/main/res/values/strings.xml
@@ -469,6 +469,7 @@
     <string name="transaction_history_error_failed_to_load">Failed to load transaction history.\nClick on reload button to update the information.</string>
     <string name="transaction_history_multiple_addresses">Multiple addresses</string>
     <string name="transaction_history_not_supported_description">Transaction history is currently not supported for this blockchain. But don\'t worry, we\'re working on it! In the meantime you can check it in the explorer.</string>
+    <string name="transaction_history_operation">Operation</string>
     <string name="transaction_history_transaction_from_address">from: %s</string>
     <string name="transaction_history_transaction_to_address">to: %s</string>
     <string name="transaction_history_tx_in_progress">In progress…</string>
