--- a/core/res/src/main/res/values-ru/strings.xml
+++ b/core/res/src/main/res/values-ru/strings.xml
@@ -395,7 +395,7 @@
     <string name="send_amount_substract_footer">Сумма к получению %1$s</string>
     <string name="send_destination_hint_address">Адрес</string>
     <string name="send_destination_tag_field">Код назначения</string>
-    <string name="send_datetime_formatter">%1$s в %2$s</string>
+    <string name="send_date_format">%1$s в %2$s</string>
     <string name="send_enter_address_field">Введите адрес</string>
     <string name="send_error_address_same_as_wallet">Адрес совпадает с адресом кошелька</string>
     <string name="send_extras_error_invalid_destination_tag">Недопустимый Tag. Он не будет добавлен в транзакцию.</string>
@@ -427,7 +427,7 @@
     <string name="send_notification_invalid_amount_text">Включенная комиссия превышает сумму перевода, что приводит к отрицательному значению.</string>
     <string name="send_notification_invalid_minimum_amount_text">Минимальная сумма отправки - %1$s. Пожалуйста, убедитесь, что остаток после отправки также не будет меньше %1$s.</string>
     <string name="send_notification_invalid_reserve_amount_title">Сумма резерва не может быть менее %1$s.</string>
-    <string name="send_notification_top_up_text">Пожалуйста, пополните свой баланс, чтобы продолжить.</string>
+    <string name="send_notification_invalid_reserve_amount_text">Пожалуйста, пополните свой баланс, чтобы продолжить.</string>
     <string name="send_notification_high_fee_title">Увеличение комиссии</string>
     <string name="send_notification_high_fee_text">Комиссия при переводе всего баланса выше. Для того, чтобы снизить комиссию Вы можете оставить 0.01.</string>
     <string name="send_notification_exceed_fee_title">Комиссия превышает баланс</string>
