--- a/core/res/src/main/res/values/strings.xml
+++ b/core/res/src/main/res/values/strings.xml
@@ -395,7 +395,7 @@
     <string name="send_amount_substract_footer">The recipient will receive %1$s</string>
     <string name="send_destination_hint_address">Address</string>
     <string name="send_destination_tag_field">Destination Tag</string>
-    <string name="send_datetime_formatter">%1$s at %2$s</string>
+    <string name="send_date_format">%1$s at %2$s</string>
     <string name="send_enter_address_field">Enter address</string>
     <string name="send_error_address_same_as_wallet">Address is the same as wallet address</string>
     <string name="send_extras_error_invalid_destination_tag">Invalid Tag. It won\'t be added to the transaction.</string>
